# ai-agent-system

./: .env.example  .gitignore  pyproject.toml  记忆系统落地总结.md
config/agents/: content-strategist.md  content-strategist.yaml  copywriter.md  copywriter.yaml  data-analyst.md  data-analyst.yaml  investment-analyst.md  investment-analyst.yaml  main.md  main.yaml  ops-monitor.md  ops-monitor.yaml  product-designer.md  product-designer.yaml  researcher.md  researcher.yaml  script-editor.md  script-editor.yaml  tech-dev.md  tech-dev.yaml  visual-designer.md  visual-designer.yaml
config/baselines/: researcher_baseline.yaml
config/prompts/: content-strategist.yaml  copywriter.yaml  data-analyst.yaml  researcher.yaml  tech-dev.yaml
config/workflows/: competitor-analysis.yaml  content-production.yaml  daily-collect.yaml
docs/claude-code/: 00-项目进度表.md  01-需求文档.md  02-设计方案.md  03-开发文档.md  04-测试验收文档.md
docs/final/: 00-项目进度表.md  02-设计方案.md  03-开发文档.md  合并分析报告.md
docs/openclaw/: 00-项目进度表-陈陈.md  01-需求文档-product-designer.md  02-设计方案-product-designer.md  03-开发文档-tech-dev.md  04-测试验收文档-tech-dev.md
scripts/: run_e2e.py
src/: cli.py  memory_cli.py
src/approval/: feishu.py  router.py  rule_engine.py
src/cost/: __init__.py  attribution.py  budget.py  router.py
src/deploy/: __init__.py  canary.py  iam.py  rollback.py
tests/: conftest.py  test_cost.py  test_deploy.py  test_feedback.py  test_hallucination.py  test_knowledge.py  test_observability.py  test_orchestration.py  test_planning.py  test_prompts.py  test_rag_verify.py  test_streaming.py  test_trajectory.py
(+87 files in other folders)
