[project]
name = "ai-agent-system"
version = "0.1.0"
description = "AI Agent 完整系统：11 Agent × 6 核心组件"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5",
    "openai>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.scripts]
ai-agent = "src.cli:main"
memory-cli = "src.memory_cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
    "mypy>=1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
